need to fix video overflow problem

--- a/src/css/messages.css
+++ b/src/css/messages.css
@@ -1,3 +1,118 @@
-
+.messages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: white;
+}
+.messages h1 {
+  margin-top: 70px;
+  margin-bottom: 50px;
+  font-size: 80px;
+  font-weight: 500;
+  font-family: "Quattrocento", serif;
+}
+.messages .message-questions {
+  height: 20vh;
+  width: 100%;
+  background-color: #d8d8d8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 70px;
+}
+.messages .message-questions h3 {
+  font-size: 26px;
+  font-weight: 300;
+  color: white;
+}
+.messages .message-questions h3 span {
+  color: #7C5296;
+}
+.messages .catalog-text {
+  height: 30vh;
+  width: 80%;
+  background-color: #7C5296;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+}
+.messages .catalog-text h2 {
+  font-size: 64px;
+  font-weight: 300;
+}
+.messages .catalog-text h3 {
+  font-size: 32px;
+  font-weight: 200;
+  margin-top: -10px;
+}
+.messages .catalog-text h3 span {
+  color: black;
+  text-decoration: underline;
+}
+.messages .catalog {
+  height: 120vh;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  overflow: hidden;
+}
+.messages .catalog .current-month {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+.messages .catalog .current-month h2 {
+  font-size: 64px;
+  font-weight: 300;
+}
+.messages .catalog .current-month .carousel {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+.messages .catalog .current-month .carousel .carousel-video {
+  height: 250px;
+  width: 390px;
+  background-color: #d8d8d8;
+  margin-right: 20px;
+}
+.messages .catalog .previous-month {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+.messages .catalog .previous-month h2 {
+  font-size: 64px;
+  font-weight: 300;
+}
+.messages .catalog .previous-month .carousel {
+  display: flex;
+  flex-direction: row;
+}
+.messages .catalog .previous-month .carousel .carousel-video {
+  height: 250px;
+  width: 390px;
+  background-color: #d8d8d8;
+  margin-right: 20px;
+}
+.messages .catalog h4 {
+  font-size: 24px;
+  font-weight: 200;
+  text-align: center;
+}
+.messages .catalog h4 span {
+  color: #7C5296;
+  text-decoration: underline;
+  font-weight: 400;
+}
 
 /*# sourceMappingURL=messages.css.map */
